  sell is useless.
- Mephisto's Lair
- The Lord of the Foocubi's Lair

New Monster Spells
- Sonic Scream
- Gas Cloud
- Slime Spray

New Items
- Ornate Mace
- Silver Mace
- Bone Knife
- Throwing Axe
- Razor Whip
- Grain Scythe
- Earmuff (pluralization to "Earmuffs" is currently WIP)
- Flowing Dress
- Snappy Tuxedo
- Iron Mantle
- Cloak of Flight
- Cloak of Reflection
- Tower Shield
- Hide Shield
- Rogues Gloves
- Boxing Gloves
- Amulet of Drain Resistance
- Amulet of Nausea
- Amulet of Danger
- Mask
- Playing card deck
- Deck of fate
- Pinch of Catnip
- Potion of Reflection
- Scroll of Cloning
- Scroll of Pure Law
- Scroll of True Neutrality
- Scroll of Raw Chaos
- Wand of Wonder
- Wand of Acid
- Wand of Poison Gas
- Wand of Sonics
- Bony Quill
- Ooze Dragon Scale Mail
- Razor Dragon Scale Mail
- Filth Dragon Scale Mail
- Hex Dragon Scale Mail
- Void Dragon Scales
- Ooze Dragon Scales
- Razor Dragon Scales
- Filth Dragon Scales
- Hex Dragon Scales
- Void Dragon Scales

New Monsters
- Giant Fly
- Earthshark
- Will-O'-The-Wisp
- Monstrous spider
- Memory Hound
- Weeping Eye
- Serval
- Lion
- Porcupine
- Manticore
- Nightmare
- Death maggot
- Lamassu
- Ooze Dragon
- Razor Dragon
- Filth Dragon
- Hex Dragon
- Void Dragon
- Fusion Elemental
- Legendary Lichen
- Worm that Walks
- Lord of Worms
- Lemur
- Zombie Dragon
- Animated Statue
- Desert Jinn
- Marid
- Merfolk
- Sea Horse
- Velociraptor
- T-Rex
- Banshee
- Corrosive Sphere
- Barghest
- Giant Praying Mantis
- Elder Kraken
- Amalgamation
- Bad Clone
- Draugr
- Amphisbaena
- Silver Golem
- Sludge Golem
- Cow
- Phoenix
- Spectre
- Little Bird
- Falcon
- Giant Falcon
- Dust Devil
- Swordfish
- Martial Artist
- Martial Master
- Mystic Scarab
- Goblin Windmage
- Whirling Sphere
- Chimera
- Cerastes
- Serpopard
- Lindorm
- Storm Elemental
- Cartomancer (Player Monster)
- Dragonmaster (Player Monster)
- Infernal (Non-generated Race)
- Drake (Dragonmaster Quest)

New Unique Monsters
- Emperor Sankis
- Master of Cats