@@ -967,6 +967,7 @@ static const short grownups[][2] = {
     { PM_BABY_RED_DRAGON, PM_RED_DRAGON },
     { PM_BABY_WHITE_DRAGON, PM_WHITE_DRAGON },
     { PM_BABY_ORANGE_DRAGON, PM_ORANGE_DRAGON },
+    { PM_BABY_PURPLE_DRAGON, PM_PURPLE_DRAGON },
     { PM_BABY_BLACK_DRAGON, PM_BLACK_DRAGON },
     { PM_BABY_BLUE_DRAGON, PM_BLUE_DRAGON },
     { PM_BABY_GREEN_DRAGON, PM_GREEN_DRAGON },
