@@ -2,7 +2,7 @@
 /* Copyright (c) Mike Threepoint, 1989.                           */
 /* NetHack may be freely redistributed.  See license for details. */
 
-/* Edited on 4/12/18 by NullCGT */
+/* Edited on 4/22/18 by NullCGT */
 
 /*
  * The data in this file is processed twice, to construct two arrays.
@@ -399,11 +399,12 @@ DRGN_ARMR("shimmering dragon scale mail", 1, DISPLACED, 1200, 1, CLR_CYAN),
 DRGN_ARMR("red dragon scale mail",     1, FIRE_RES,    900, 1, CLR_RED),
 DRGN_ARMR("white dragon scale mail",   1, COLD_RES,    900, 1, CLR_WHITE),
 DRGN_ARMR("orange dragon scale mail",  1, SLEEP_RES,   900, 1, CLR_ORANGE),
+DRGN_ARMR("purple dragon scale mail",  1, SONIC_RES,  1200, 1, CLR_BRIGHT_MAGENTA),
 DRGN_ARMR("black dragon scale mail",   1, DISINT_RES, 1200, 1, CLR_BLACK),
 DRGN_ARMR("blue dragon scale mail",    1, SHOCK_RES,   900, 1, CLR_BLUE),
 DRGN_ARMR("green dragon scale mail",   1, POISON_RES,  900, 1, CLR_GREEN),
 DRGN_ARMR("ooze dragon scale mail",    1, ACID_RES,   1200, 1, CLR_BRIGHT_GREEN),
-DRGN_ARMR("razor dragon scale mail",   1, FAST,       1200, 1, CLR_BRIGHT_CYAN),
+DRGN_ARMR("razor dragon scale mail",   1, FAST,       1200, 1, CLR_CYAN),
 DRGN_ARMR("filth dragon scale mail",   1, SICK_RES,   1200, 1, CLR_BROWN),
 DRGN_ARMR("hex dragon scale mail",     1, ANTIMAGIC,  1200, 1, CLR_BRIGHT_BLUE),
 DRGN_ARMR("void dragon scale mail",    1, DISINT_RES, 1200, 1, CLR_MAGENTA),
@@ -416,11 +417,12 @@ DRGN_ARMR("silver dragon scales",      0, REFLECTING,  700, 7, DRAGON_SILVER),
 DRGN_ARMR("shimmering dragon scales",  0, DISPLACED,   700, 7, CLR_CYAN),
 DRGN_ARMR("red dragon scales",         0, FIRE_RES,    500, 7, CLR_RED),
 DRGN_ARMR("white dragon scales",       0, COLD_RES,    500, 7, CLR_WHITE),
+DRGN_ARMR("purple dragon scales",      0, SLEEP_RES,   700, 7, CLR_BRIGHT_MAGENTA),
 DRGN_ARMR("orange dragon scales",      0, SLEEP_RES,   500, 7, CLR_ORANGE),
 DRGN_ARMR("black dragon scales",       0, DISINT_RES,  700, 7, CLR_BLACK),
 DRGN_ARMR("blue dragon scales",        0, SHOCK_RES,   500, 7, CLR_BLUE),
 DRGN_ARMR("green dragon scales",       0, POISON_RES,  500, 7, CLR_GREEN),
-DRGN_ARMR("razor dragon scales",       0, FAST,        700, 7, CLR_BRIGHT_CYAN),
+DRGN_ARMR("razor dragon scales",       0, FAST,        700, 7, CLR_CYAN),
 DRGN_ARMR("ooze dragon scales",        0, POISON_RES,  700, 7, CLR_BRIGHT_GREEN),
 DRGN_ARMR("filth dragon scales",       0, SICK_RES,    700, 7, CLR_BROWN),
 DRGN_ARMR("hex dragon scales",         0, ANTIMAGIC,   700, 7, CLR_BRIGHT_BLUE),
@@ -511,7 +513,7 @@ CLOAK("cloak of displacement", "piece of cloth",
 
 /* shields */
 SHIELD("small shield", None,
-       1, 0, 0,          0, 6, 0,  30,  3, 9, 0,  WOOD, HI_WOOD),
+       1, 0, 0,          0, 3, 0,  30,  3, 9, 0,  WOOD, HI_WOOD),
 SHIELD("elven shield", "blue and green shield",
        0, 0, 0,          0, 2, 0,  40,  7, 8, 0,  WOOD, CLR_GREEN),
 SHIELD("tower shield", None,
@@ -526,6 +528,8 @@ SHIELD("hide shield", None,
        1, 0, 1,          0, 2, 0, 25, 8, 8, 0,  LEATHER, CLR_ORANGE),
 SHIELD("dwarvish roundshield", "large round shield",
        0, 0, 0,          0, 4, 0, 100, 10, 8, 0,  IRON, HI_METAL),
+SHIELD("shield of resonance", "polished silver shield",
+       0, 1, 0, SONIC_RES, 3, 0,  50, 50, 8, 0,  SILVER, HI_SILVER),
 SHIELD("shield of reflection", "polished silver shield",
        0, 1, 0, REFLECTING, 3, 0,  50, 50, 8, 0,  SILVER, HI_SILVER),
 
