@@ -213,6 +213,7 @@ New Items
 - Cloak of Reflection
 - Tower Shield
 - Hide Shield
+- Shield of Resonance
 - Rogues Gloves
 - Boxing Gloves
 - Amulet of Drain Resistance
@@ -236,12 +237,14 @@ New Items
 - Razor Dragon Scale Mail
 - Filth Dragon Scale Mail
 - Hex Dragon Scale Mail
-- Void Dragon Scales
+- Void Dragon Scale Mail
+- Purple Dragon Scale Mail
 - Ooze Dragon Scales
 - Razor Dragon Scales
 - Filth Dragon Scales
 - Hex Dragon Scales
 - Void Dragon Scales
+- Purple Dragon Scales
 
 New Monsters
 - Giant Fly
